In progress reflection based adapter

--- a/src/AllJoyn.Dsb.MockDevices/AllJoyn.Dsb.MockDevices.csproj
+++ b/src/AllJoyn.Dsb.MockDevices/AllJoyn.Dsb.MockDevices.csproj
@@ -115,6 +115,7 @@
     <Compile Include="MockOnOffSwitch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\AllJoynAttributes.cs" />
+    <Compile Include="Test\InterfaceDefinitions.cs" />
     <Compile Include="Test\ReflectionAdapter.cs" />
     <EmbeddedResource Include="Properties\AdapterLib.MockDevices.rd.xml" />
   </ItemGroup>
